--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         </div>
         <div>
-            <button class="button-85" onclick="aLtErNaTe()" id="button-20">Encoding</button>
-            <button class="button-85" onclick="aLtErNaTe()" id="button-20">Decoding</button>
+            <button class="button-85" onclick="encodSter()" id="button-20">Encoding</button>
+            <button class="button-85" onclick="decodeSter()" id="button-20">Decoding</button>
             <button class="button-85" onclick="aLtErNaTe()" id="button-20">Image Encoding</button>
             <button class="button-85" onclick="aLtErNaTe()" id="button-20">Image Decoding</button>
         </div>
