--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/cfd50280ac.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <span>v 1.0.5</span>
     <section class="section-1">
         <div class="div-0">
             <div><img class="img-1" src="smt.jpg" alt=""></div>
@@ -20,7 +21,7 @@
         </div>
         <div class="div-1">
             <h2 class="h2-1">Text Converter</h2>
-            <textarea id="textarea1" placeholder="Write your text or Past your text"></textarea>
+            <textarea id="textarea1" placeholder="Write your text or Paste your text"></textarea>
             <div class="div-6">
                 <div onclick="copyText()" class="span14 tooltip">
                     <i class="fa-regular fa-copy"></i><span class="tooltiptext">Copy</span>
@@ -62,7 +63,7 @@
     <footer>
         <div class="div-3">
             <span>
-               <span class="span-1">design by :</span> <a href="https://www.facebook.com/profile.php?id=100089667051639&mibextid=ZbWKwL">Md Anisur Rahman</a>
+               <span class="span-1">Design by :</span> <a href="https://www.facebook.com/profile.php?id=100089667051639&mibextid=ZbWKwL">Md Anisur Rahman</a>
             </span>
             <div class="div-4">
                 <a href="https://www.facebook.com/profile.php?id=100089667051639&mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
