--- a/imagecoading.html
+++ b/imagecoading.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/cfd50280ac.js" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="style.css"> -->
 
     <style>
-body{
-    margin: 0px;
-}
+body {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    margin: 0;
+    
+  }
+ 
             
   .div--1{
     display: flex;
@@ -18,8 +25,8 @@ body{
     justify-content: center;
     box-shadow: 0 29px 52px rgba(0,0,0,0.40), 0 25px 16px rgba(0,0,0,0.20);
     padding-bottom: 20px;
-    width: 350px;
-    /* margin: 50px 35px; */
+    width: 30%;
+    margin: 50px 450px;
     padding: 30px 0px;
     border-radius: 8px;
 
